added line number functionality

--- a/index.html
+++ b/index.html
@@ -132,7 +132,9 @@
                 <strong>Alert!</strong> You cannot remove the line numbers if added in this current version
             </div>
             
+            <!-- Used to add Line Number to code -->
             <button class="btn btn-default" onclick="addLineNumbers()">Add Line Numbers</button>
+            
             <!-- Used to store the printed code -->
             <div id="printSpace" class="printSpace">Hello, and welcome to CodePrinter!<br />This is where your code will be printed out!</div>
         </div>
